balise p pour hello git

--- a/html6/index.html
+++ b/html6/index.html
@@ -30,6 +30,7 @@
     <p> je s'appelle groot,je suis le gardien de la galaxie </p>
     <p> je s'appelle groot,je suis le gardien de la galaxie </p>
     <img src="images/groot.jpg" alt="groot">
+    <p>hello git</p>
 
     <div>
         <ul>
