--- a/Devoir2/table.html
+++ b/Devoir2/table.html
@@ -67,7 +67,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="active-row">
+        <tr class="active">
             <td>chimie</td>
             <td>12</td>
             <td>10</td>
